Fixed malformed URL exception when specifying relative paths.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@661355 13f79535-47bb-0310-9956-ffa450edef68